[gd_scene load_steps=11 format=2]

[ext_resource path="res://mapeditor/MapEditorNew.gd" type="Script" id=1]
[ext_resource path="res://camera/MainCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://custom_tile_map/ChunkManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/walls/hjm-mossy_wall_low.png" type="Texture" id=4]
[ext_resource path="res://custom_tile_map/MapManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://tilesets/basic_tileset.tres" type="TileSet" id=6]
[ext_resource path="res://custom_tile_map/CustomTileMap.gd" type="Script" id=7]
[ext_resource path="res://custom_tile_map/Chunk.tscn" type="PackedScene" id=8]
[ext_resource path="res://custom_tile_map/AStarMap.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 0.5

[node name="MapEditor" type="Node"]
script = ExtResource( 1 )

[node name="MapManager" parent="." instance=ExtResource( 5 )]
tileset = ExtResource( 6 )

[node name="ChunkManager" parent="MapManager" instance=ExtResource( 3 )]

[node name="Chunk" parent="MapManager/ChunkManager" instance=ExtResource( 8 )]
visible = false

[node name="AStarMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 6 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( -1, 13, 0, -65536, 13, 0, -65535, 13, 131076, -65534, 13, 0, -65533, 13, 0, -65532, 13, 131076, -65531, 13, 0, -65530, 13, 0, -65529, 13, 0, -65528, 13, 131076, -65527, 13, 0, -65526, 13, 0, -65525, 13, 0, 65535, 13, 0, 131071, 13, 0, 196607, 13, 131076, 262143, 13, 0, 327679, 13, 131076, 393215, 13, 0 )
script = ExtResource( 9 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]

[node name="MouseCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollision"]
shape = SubResource( 1 )

[node name="Preview" type="Sprite" parent="."]
position = Vector2( 217.966, 93.2342 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 777, 389, 64, 32 )
__meta__ = {
"_editor_description_": ""
}

[node name="CustomTileMap" type="YSort" parent="."]
visible = false
script = ExtResource( 7 )

[node name="CellBoundaries" type="YSort" parent="CustomTileMap"]
visible = false

[node name="Shapes" type="YSort" parent="CustomTileMap"]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_left = 844.497
margin_top = 193.663
margin_right = 970.497
margin_bottom = 265.663
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "19"

[node name="Button2" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 24.0
margin_right = 126.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "18"

[node name="BrushSize" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 48.0
margin_right = 126.0
margin_bottom = 72.0

[node name="BrushRect" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 76.0
margin_right = 126.0
margin_bottom = 96.0
text = "Rect"

[node name="BrushSquare" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 100.0
margin_right = 126.0
margin_bottom = 120.0
text = "Square"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/BrushSize" to="." method="_on_BrushSize_text_changed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/BrushRect" to="." method="_on_BrushRect_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/BrushSquare" to="." method="_on_BrushSquare_pressed"]
